--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/language": "^6.11.0",
+    "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.8",
     "@uiw/react-codemirror": "^4.23.10",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
