--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.23.10",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "react": "^19.0.0",
+    "react-complex-tree": "^2.6.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.2"
   },
