--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "@uiw/react-codemirror": "^4.23.10",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "react": "^19.0.0",
     "react-complex-tree": "^2.6.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
