--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@mui/x-data-grid": "^8.8.0",
     "@uiw/react-codemirror": "^4.23.10",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "is-hotkey": "^0.2.0",
     "react": "^19.0.0",
     "react-complex-tree": "^2.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "slate-history": "^0.113.1",
     "slate-react": "^0.117.4"
   },
   "devDependencies": {
