--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "slate": "^0.118.0",
     "slate-history": "^0.113.1",
-    "slate-react": "^0.117.4"
+    "slate-react": "^0.117.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
