--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "is-hotkey": "^0.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-arborist": "^3.4.3",
     "react-complex-tree": "^2.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
